<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/taska_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:singleLine="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/taska_title"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="5"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:padding="3dp"
                android:singleLine="false"
                android:text="@string/tv_list_task"
                android:textColor="#000" />

            <TextView
                android:id="@+id/taska_date"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="2"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="3dp"
                android:singleLine="true"
                android:text="@string/tv_list_deadline"
                android:textColor="#000" />

            <TextView
                android:id="@+id/taska_priority"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="3dp"
                android:singleLine="true"
                android:text="@string/tv_list_priority"
                android:textColor="#000" />

            <TextView
                android:id="@+id/taska_complete"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="0.5"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="3dp"
                android:singleLine="true"
                android:text="@string/tv_list_completed"
                android:textColor="#000" />
        </TableRow>

    </TableLayout>

</RelativeLayout>